--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "^14.14.20",
     "axios": "^0.21.1",
     "next": "10.0.3",
+    "pg": "^8.5.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "gray-matter": "^4.0.2",
