--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "blog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@types/node": "^14.14.20",
-    "axios": "^0.21.1",
-    "next": "10.0.3",
-    "pg": "^8.5.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.29"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "gray-matter": "^4.0.2",
-    "typescript": "^4.1.3"
-  }
+   "name": "blog",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "ts-node src/index.ts"
+   },
+   "dependencies": {
+      "@babel/cli": "^7.12.10",
+      "@types/node": "^14.14.20",
+      "axios": "^0.21.1",
+      "next": "10.0.3",
+      "pg": "^8.4.0",
+      "react": "17.0.1",
+      "react-dom": "17.0.1",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.29"
+   },
+   "devDependencies": {
+      "@types/node": "^8.0.29",
+      "@types/react": "^17.0.0",
+      "@types/react-dom": "^17.0.0",
+      "gray-matter": "^4.0.2",
+      "typescript": "3.3.3333"
+   }
 }
