--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
    },
    "dependencies": {
       "@babel/cli": "^7.12.10",
+      "@babel/core": "^7.12.10",
       "@types/node": "^14.14.20",
       "axios": "^0.21.1",
       "next": "10.0.3",
@@ -19,6 +20,7 @@
       "typeorm": "0.2.29"
    },
    "devDependencies": {
+      "@babel/plugin-proposal-decorators": "^7.12.12",
       "@types/node": "^8.0.29",
       "@types/react": "^17.0.0",
       "@types/react-dom": "^17.0.0",
