--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
    "scripts": {
       "dev": "next dev",
       "build": "next build",
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "migration:run": "typeorm migration:run",
+      "migration:revert": "typeorm migration:revert",
+      "babel:build": "babel ./src --out-dir dist --extensions \".ts,.tsx\" ",
+      "babel:watch": "babel ./src -w --out-dir dist --extensions \".ts,.tsx\" "
    },
    "dependencies": {
       "@babel/cli": "^7.12.10",
@@ -21,7 +25,6 @@
    },
    "devDependencies": {
       "@babel/plugin-proposal-decorators": "^7.12.12",
-      "@types/node": "^8.0.29",
       "@types/react": "^17.0.0",
       "@types/react-dom": "^17.0.0",
       "gray-matter": "^4.0.2",
