--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "@babel/core": "^7.12.10",
       "@types/node": "^14.14.20",
       "axios": "^0.21.1",
+      "md5": "^2.3.0",
       "next": "10.0.3",
       "pg": "^8.4.0",
       "react": "17.0.1",
@@ -25,6 +26,8 @@
    },
    "devDependencies": {
       "@babel/plugin-proposal-decorators": "^7.12.12",
+      "@types/axios": "^0.14.0",
+      "@types/md5": "^2.2.1",
       "@types/react": "^17.0.0",
       "@types/react-dom": "^17.0.0",
       "gray-matter": "^4.0.2",
