--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
       "axios": "^0.21.1",
       "md5": "^2.3.0",
       "next": "10.0.3",
+      "next-iron-session": "^4.1.10",
       "pg": "^8.4.0",
       "react": "17.0.1",
       "react-dom": "17.0.1",
