--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "@babel/core": "^7.12.10",
       "@types/node": "^14.14.20",
       "axios": "^0.21.1",
+      "browserslist": "^4.16.1",
       "md5": "^2.3.0",
       "next": "10.0.3",
       "next-iron-session": "^4.1.10",
