--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,13 @@
 {
-  "presets": ["next/babel"],
+  "presets": [
+    "next/babel"
+  ],
   "plugins": [
-    ["@babel/plugin-proposal-decorators", { "legacy": true }]
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ]
   ]
 }
