--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/blog-data/
 # dependencies
 /node_modules
+/.idea/
+/.vscode/
 /.pnp
 .pnp.js
-/blog-data
- /.idea/
 
 # testing
 /coverage
@@ -19,7 +20,6 @@
 
 # misc
 .DS_Store
-*.pem
 
 # debug
 npm-debug.log*
@@ -31,6 +31,3 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-
-# vercel
-.vercel
