--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@babel/cli": "^7.10.1",
     "axios": "^0.19.2",
+    "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
     "marked": "^1.1.0",
+    "md5": "^2.3.0",
     "next": "9.4.1",
     "pg": "^8.2.1",
     "react": "16.13.1",
@@ -29,6 +31,7 @@
     "@babel/plugin-proposal-decorators": "^7.10.1",
     "@types/axios": "^0.14.0",
     "@types/marked": "^0.7.4",
+    "@types/md5": "^2.3.0",
     "@types/node": "^14.0.6",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
