验证码查看和登录注册都完事了，新年快乐，sleeping

--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
       {
         "legacy": true
       }
-    ]
+    ],
+    ["import", { "libraryName": "antd", "libraryDirectory": "lib"}, "antd"]
   ]
 }
