--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   },
   "dependencies": {
     "@babel/cli": "^7.10.1",
+    "antd": "^4.12.3",
     "axios": "^0.19.2",
     "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
     "marked": "^1.1.0",
     "md5": "^2.3.0",
     "next": "9.4.1",
+    "node-schedule": "^2.0.0",
+    "nodemailer": "^6.4.17",
     "pg": "^8.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -32,10 +35,14 @@
     "@types/axios": "^0.14.0",
     "@types/marked": "^0.7.4",
     "@types/md5": "^2.3.0",
+    "@types/next": "^9.0.0",
     "@types/node": "^14.0.6",
+    "@types/node-schedule": "^1.3.1",
+    "@types/nodemailer": "^6.4.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/ua-parser-js": "^0.7.33",
+    "babel-plugin-import": "^1.13.3",
     "concurrently": "^5.2.0",
     "next-images": "^1.4.0",
     "typescript": "^3.9.2"
