--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@babel/cli": "^7.10.1",
+    "@re-editor/core": "^0.5.8",
     "antd": "^4.12.3",
     "axios": "^0.19.2",
+    "braft-editor": "^2.3.9",
+    "braft-extensions": "^0.1.1",
     "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
     "marked": "^1.1.0",
@@ -23,8 +26,10 @@
     "node-schedule": "^2.0.0",
     "nodemailer": "^6.4.17",
     "pg": "^8.2.1",
+    "re-editor": "^0.5.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-quill": "^1.3.5",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.26.5",
     "typeorm": "^0.2.25",
